# UxH_ToolKit

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/teamuxh/uxh_toolkit/: ITestRoot.aidl
app/src/main/cpp/: CMakeLists.txt  main.cpp  rootMain.cpp
app/src/main/java/com/teamuxh/uxh_toolkit/: MainActivity.kt
app/src/main/java/com/teamuxh/uxh_toolkit/constant/: Native.kt  NativeRoot.kt
app/src/main/java/com/teamuxh/uxh_toolkit/services/: RootService.kt
app/src/main/java/com/teamuxh/uxh_toolkit/ui/main/: LibSheetDialog.kt  MainFragment.kt  MainViewModel.kt
app/src/main/java/com/teamuxh/uxh_toolkit/utils/: Logger.kt  Toast.kt
app/src/main/res/drawable/: box_output.xml
app/src/main/res/layout/: fragment_main.xml  lib_dialog_sheet.xml  text_row.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
